--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ kubernetes~=31.0.0
 bleach~=6.2.0
 beautifulsoup4~=4.12.3
 h11~=0.14.0
-pip~=23.2.1
+pip~=24.3.1
 attrs~=24.3.0
 Jinja2~=3.1.4
 rsa~=4.9
@@ -36,3 +36,6 @@ executing~=2.1.0
 websocket-client~=1.8.0
 durationpy~=0.9
 requests-oauthlib~=2.0.0
+SQLAlchemy~=2.0.37
+schemas~=0.7.1
+crud~=0.1
