--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 fastapi~=0.115.6
 kubernetes~=31.0.0
 bleach~=6.2.0
+psycopg2-binary~=2.9.10
+email-validator~=2.2.0
 beautifulsoup4~=4.12.3
 h11~=0.14.0
-pip~=24.3.1
 attrs~=24.3.0
+python-multipart~=0.0.20
 Jinja2~=3.1.4
 rsa~=4.9
 pyasn1~=0.6.1
+bcrypt~=4.2.1
 absl-py~=2.1.0
 PyYAML~=6.0.2
+itsdangerous~=2.2.0
 sniffio~=1.3.1
 typing_extensions~=4.12.2
 pyasn1_modules~=0.4.1
@@ -39,3 +43,4 @@ requests-oauthlib~=2.0.0
 SQLAlchemy~=2.0.37
 schemas~=0.7.1
 crud~=0.1
+passlib~=1.7.4
