--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ absl-py~=2.1.0
 PyYAML~=6.0.2
 itsdangerous~=2.2.0
 sniffio~=1.3.1
+python-dotenv~=1.0.1
 typing_extensions~=4.12.2
 pyasn1_modules~=0.4.1
 cachetools~=5.5.0
@@ -44,3 +45,4 @@ SQLAlchemy~=2.0.37
 schemas~=0.7.1
 crud~=0.1
 passlib~=1.7.4
+python-dotenv~=1.0.1
