--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 SIMULATOR.URL=http://62.60.211.89:8888/api/v1/simulate
+DATABASE_URL=postgresql://postgres:postgres@postgres-ut:5432/simulation_client
 #SIMULATOR.URL=http://127.0.0.1:8200/api/v1/simulate
